--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-scripts": "2.1.1",
+    "react-test-renderer": "^16.8.6",
     "uuid": "^3.3.2"
   },
   "scripts": {
